package casino.bet;

public class BetID {
}
