package casino.cashier;

public class CardID: GeneralI {
}
