package casino.cashier;


import casino.bet.BetID;

import java.util.Set;

public class GamblerCard implements IGamblerCard {
    /**
     * returns all generated betID's by this card
     *
     * @return a copied set of betID's generated by this card.
     */
    @Override
    public Set<BetID> returnBetIDs() {
        return null;
    }

    /**
     * returns all generated betID's by this card, and clears all betID's from the card.
     *
     * @return a copied set of betID's generated by this card.
     */
    @Override
    public Set<BetID> returnBetIDsAndClearCard() {
        return null;
    }

    /**
     * The card generates a unique betID for every bet made by the gambler on the machine.
     * A list of all generated betID’s is also stored on the card. BetID’s also contain a timestamp.
     *
     * @return
     */
    @Override
    public BetID generateNewBetID() {
        return null;
    }

    /**
     * return number of betID's generated on this card.
     *
     * @return
     */
    @Override
    public int getNumberOfBetIDs() {
        return 0;
    }

    @Override
    public CardID getCardID() {
        return null;
    }
}
