package casino.game;



abstract class AbstractGame implements IGame{

 // define only the constructor here
}
