package casino.gamingmachine;

public class GamingMachineID {
}
